<resources>
    <string name="app_name">OpenFire Test</string>
    <string name="preference_file_key">%1$s.PREFERENCE_FILE_KEY</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="login">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register_">Register!</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Errors-->
    <string name="cannot_be_blank_error">%1$s cannot be blank!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>

</resources>